# Xi_Lusheng_Bot

./: .env.dev  .env.prod  .gitignore  README.md  bot.py  pyproject.toml  requirements.txt
data/: lolicon.db  setu_config.json
data/gsmaterial/: config.json
data/gspanel/: 103552615-甘雨.html  103552615-胡桃.html  calc-rule.json  qq-uid.json  tpl.html
data/gspanel/cache/: 103552615__data.json
data/reply_data/: data.json  msg_data.py  utils_data.json
data/setu/: customer_api.json
menu_config/: config.json
menu_config/menus/: nonebot_plugin_abstract.json  nonebot_plugin_baidutranslate.json  nonebot_plugin_crazy_thursday.json  nonebot_plugin_gsmaterial.json  nonebot_plugin_gspanel.json  nonebot_plugin_setu.json  nonebot_plugin_ygo.json
path/: path.py  path_utils.py
src/plugins/Baidu_Translate/: __init__.py  config.py  utils.py
src/plugins/admin/: __init__.py
src/plugins/ai/: __init__.py
src/plugins/destiny2/: __init__.py
src/plugins/emoticon/: __init__.py  constant.py
src/plugins/help/: __init__.py
src/plugins/passive_skills/: __init__.py  constant.py
src/plugins/pixiv/: __init__.py  constant.py  create_data.py  url.py  utils.py
src/plugins/reply/: __init__.py  config.py  constant.py  msg_data.py  utils.py
src/plugins/reply/data/: data.json  utils_data.json
src/plugins/reptile/: __init__.py  config.py  constant.py  utils.py
src/plugins/scold/: __init__.py
src/plugins/search_pictures/: __init__.py  config.py  constant.py  utils.py
utils/: config.py  permission.py  utils_def.py
